k8s/careerforge/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: cf-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:v1.0.1
          ports:
            - containerPort: 1025
            - containerPort: 8025
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: cf-demo
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: http
      port: 8025
      targetPort: 8025
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
  namespace: cf-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: mail-demo.lupulup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
